Condicionais v-if v-else v-else-if

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Vure 3</title>
+    <title>Curso Vue 3</title>
+
+    <!-- STYLE -->
+    <link rel="stylesheet" href="./assets/styles.css">
 
     <!-- VUE CDN -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -11,10 +14,20 @@
 </head>
 <body>
     <div id="app">
-        <h1>
-            {{ message }}
-        </h1>
-        <input type="text" v-model="message">
+        <div class="product-display">
+            <div class="product-container">
+                <div class="product-image">
+                    <img :src="image" alt="img_product" srcset="">
+                </div>
+                <div class="product-info">
+                    <h1>{{ product_title }}</h1>
+                    <p v-if="inStock > 10">In Stock</p>
+                    <p v-else-if="inStock < 10 && inStock > 1">Almost of out</p>
+                    <p v-else>Out of Stock</p>
+                    <!-- INFO DO PRODUTO -->
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -22,9 +35,11 @@
       
         createApp({
           setup() {
-            const message = ref('Hello vue!')
+            
             return {
-              message
+              product_title: ref('T-Shirt'),
+              image: ref("./assets/images/t-shirt-blue.png"),
+              inStock: ref(0)
             }
           }
         }).mount('#app')
