--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 </head>
 <body>
     <div id="app">
-        <div class="cart">Cart: {{ cart }}</div>
-        <br/>
-
+        <cart-display :cart="cart"></cart-display>
         
         <product-display @add-to-cart="addToCart"></product-display>
     </div>
@@ -24,7 +22,9 @@
     <!-- IMPORT DO ARQUIVO PRINCIPAL DO VUE -->
     <script src="./main.js"></script>
 
+    <!-- IMPORT DO COMPONENTE -->
     <script src="./Components/Product.js"></script>
+    <script src="./Components/Cart.js"></script>
 
     <!-- MONTA O APP -->
     <script>app.mount('#app')</script>
